--- a/Scripts/API/dockerfile
+++ b/Scripts/API/dockerfile
@@ -27,4 +27,4 @@ COPY main.py /Scripts/API/main.py
 EXPOSE 8080
 
 # Run FastAPI app
-CMD ["python3", "-m", "uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8080"]
+CMD ["python3", "-m", "uvicorn", "main.py", "--host", "0.0.0.0", "--port", "8080"]
