--- a/Scripts/API/dockerfile
+++ b/Scripts/API/dockerfile
@@ -17,14 +17,14 @@ RUN pip3 install --no-cache-dir --upgrade pip \
 WORKDIR /Scripts/API
 
 # Copy requirements and install
-COPY ./requirements.txt /Scripts/API/requirements.txt
-RUN pip3 install --no-cache-dir --upgrade -r /Scripts/API/requirements.txt
+COPY ./requirements.txt /project_hosting/Scripts/API/requirements.txt
+RUN pip3 install --no-cache-dir --upgrade -r /project_hosting/Scripts/API/requirements.txt
 
 # Copy FastAPI app
-COPY main.py /Scripts/API/main.py
+COPY ./app /app
 
 # Expose port for FastAPI
 EXPOSE 8080
 
 # Run FastAPI app
-CMD ["python3", "-m", "uvicorn", "main.py", "--host", "0.0.0.0", "--port", "8080"]
+CMD ["python3", "-m", "uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8080"]
