--- a/Scripts/docker-compose.yaml
+++ b/Scripts/docker-compose.yaml
@@ -12,5 +12,7 @@ services:
     restart: always
     ports:
       - "8080:8080"
+    environment:
+      - PYTHONUNBUFFERED=1
     networks:
       - ansible-stack
