--- a/Scripts/API/dockerfile
+++ b/Scripts/API/dockerfile
@@ -27,4 +27,4 @@ COPY ./app /app
 EXPOSE 8080
 
 # Run FastAPI app
-CMD ["python3", "-m", "uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8080"]
+ENTRYPOINT ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8080", "--reload"]
